# jiraflow

./: Makefile  README.md  description  issue_data.py  lib.py  next  next_issue  open_issue  pyproject.toml  read_jira_credentials  steps
jiraflow/: issue_data.py  next_issue.py  open_issue.py
