[tool.poetry]
name = "jiraflow"
version = "0.1.0"
description = "Scripts to interact with the JIRA api"
authors = ["Razzi Abuissa <razzi53@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
next_issue = "jiraflow.next_issue:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
